--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Utils_1"]
-	path = Utils_1
+[submodule "Utils1"]
+	path = Utils1
 	url = https://github.com/Baneeishaque/Android-Common-Utils1.git
