--- a/common3/build.gradle
+++ b/common3/build.gradle
@@ -86,5 +86,5 @@ android {
 dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation project(path: ':Utils_1:common1')
+    implementation project(path: ':Utils1:common1')
 }
